RESOLVED FIXED138195
Persist the page's muted state across web process crashes
https://bugs.webkit.org/show_bug.cgi?id=138195
Summary Persist the page's muted state across web process crashes
Ada Chan
Reported 2014-10-29 15:56:17 PDT
We need to pass "muted" as a web page creation parameter, and make sure HTMLMediaElement respects the page's current muted state during initialization.
Attachments
Patch (6.53 KB, patch)
2014-10-30 15:09 PDT, Ada Chan
andersca: review+
Ada Chan
Comment 1 2014-10-30 15:09:23 PDT
Ada Chan
Comment 2 2014-10-30 15:10:32 PDT
The second part of the bug about making sure HTMLMediaElement respecting the page's current muted state during initialization has been fixed as part of https://bugs.webkit.org/show_bug.cgi?id=138215.
Ada Chan
Comment 3 2014-11-03 10:37:47 PST
Note You need to log in before you can comment on or make changes to this bug.